k8s/production/analytics-service-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app: analytics-service
    service-type: analytics-service
  name: analytics-service-netpol
  namespace: iacherie-production
spec:
  egress:
  - ports:
    - port: 53
      protocol: TCP
    - port: 53
      protocol: UDP
    - port: 443
      protocol: TCP
    - port: 80
      protocol: TCP
    to: []
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          name: iacherie-production
    ports:
    - port: 8009
      protocol: TCP
  podSelector:
    matchLabels:
      app: analytics-service
  policyTypes:
  - Ingress
  - Egress
